@@ -1,3 +1,7 @@
+2007-05-04  Sven Neumann  <sven@gimp.org>
+
+	* app/plug-in/gimpplugin-cleanup.c: removed debug output.
+
 2007-05-04  Mukund Sivaraman  <muks@mukund.org>
 
 	* plug-ins/maze/maze.c: reduced the number of progress updates.
